plugins {
    id("java-library")
}

group = "org.glavo"
version = "1.0-SNAPSHOT"

repositories {
    mavenCentral()
}

configurations {
    testImplementation {
        extendsFrom(configurations.compileOnly.get())
    }
}

dependencies {
    compileOnly("org.jetbrains:annotations:26.1.0")
    compileOnly("com.ibm.icu:icu4j:78.3")

    testImplementation(platform("org.junit:junit-bom:6.0.0"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

tasks.withType(JavaCompile::class) {
    options.release.set(17)
}

tasks.test {
    useJUnitPlatform()
}
